CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(autotun)

INCLUDE_DIRECTORIES(include)

FIND_PATH(
	LIBSSH_INCLUDE_DIR libssh/libssh.h
	PATHS /usr/local/ /usr/
)
FIND_LIBRARY(
	LIBSSH_LIBRARY NAMES libssh ssh
	PATHS /usr/local/ /usr/
)

SET(LIBSSH_LIBRARIES ${LIBSSH_LIBRARY})
SET(LIBSSH_INCLUDE_DIRS ${LIBSSH_INCLUDE_DIR})

MARK_AS_ADVANCED(LIBSSH_LIBRARIES LIBSSH_INCLUDE_DIRS)

FIND_PATH(
	LIBINIREAD_INCLUDE_DIR iniread.h
	PATHS /usr/local/ /usr/
)

FIND_LIBRARY(
	LIBINIREAD_LIBRARY NAMES iniread
	PATHS /usr/local/ /usr/
)

SET(LIBINIREAD_LIBRARIES ${LIBINIREAD_LIBRARY})
SET(LIBINIREAD_INCLUDE_DIRS ${LIBINIREAD_INCLUDE_DIR})

MARK_AS_ADVANCED(LIBINIREAD_LIBRARIES LIBINIREAD_INCLUDE_DIRS)

ADD_SUBDIRECTORY(src)
