
ADD_DEFINITIONS(-Wall -pedantic)
ADD_DEFINITIONS(-std=c99 -D_XOPEN_SOURCE=700)

FILE( GLOB AUTOTUN_SOURCES *.c )
ADD_EXECUTABLE( autotun ${AUTOTUN_SOURCES} )

IF(STATIC_INIREAD)
    SET(LIBINIREAD_LIBRARIES "${STATIC_INIREAD}")
ENDIF()
IF(STATIC_LIBSSH)
    SET(LIBSSH_LIBRARIES "${STATIC_LIBSSH}")
ENDIF()

MESSAGE( STATUS "LIBSSH_LIBRARIES: ${LIBSSH_LIBRARIES}")
MESSAGE( STATUS "LIBINIREAD_LIBRARIES: ${LIBINIREAD_LIBRARIES}")

TARGET_LINK_LIBRARIES( autotun "${LIBSSH_LIBRARIES}" "${LIBINIREAD_LIBRARIES}" )

include_directories(pflock)

add_subdirectory(pflock)
