
ADD_DEFINITIONS(-Wall -pedantic)
ADD_DEFINITIONS(-std=c99 -D_POSIX_C_SOURCE=200809L)

FILE( GLOB AUTOTUN_SOURCES *.c )
ADD_EXECUTABLE( autotun ${AUTOTUN_SOURCES} )

IF(STATIC_LIBSSH)
    SET(LIBSSH_LIBRARIES "${STATIC_LIBSSH}")
ENDIF()

MESSAGE( STATUS "LIBSSH_LIBRARIES: ${LIBSSH_LIBRARIES}")
MESSAGE( STATUS "LIBINIREAD_LIBRARIES: ${LIBINIREAD_LIBRARIES}")

TARGET_LINK_LIBRARIES( autotun "${LIBSSH_LIBRARIES}" iniread )


ADD_EXECUTABLE( pflock pflock.c util.c)
SET_TARGET_PROPERTIES(pflock PROPERTIES COMPILE_FLAGS "-D_XOPEN_SOURCE=700 -DPF_TEST")
